# compiling-a-lisp-cpp

./: CMakeLists.txt  LICENSE  README.md  alisp.cpp  alisp.h  main.cpp  test_alisp.cpp
